fix the spacing issue in the footer of the modal

--- a/www/src/styles/algolia/style.css
+++ b/www/src/styles/algolia/style.css
@@ -279,7 +279,7 @@ html.dark {
 }
 .DocSearch-Logo svg {
   color: var(--docsearch-logo-color);
-  margin-left: 8px;
+  margin-inline-start: 8px;
 }
 .DocSearch-Hits:last-of-type {
   margin-bottom: 24px;
@@ -528,7 +528,7 @@ svg.DocSearch-Hit-Select-Icon {
   display: flex;
 }
 .DocSearch-Commands li:not(:last-of-type) {
-  margin-right: 0.8em;
+  margin-inline-end: 0.8em;
 }
 .DocSearch-Commands-Key,
 .DocSearch-Button-Key {
@@ -538,7 +538,7 @@ svg.DocSearch-Hit-Select-Icon {
   display: flex;
   height: 18px;
   justify-content: center;
-  margin-right: 0.4em;
+  margin-inline-end: 0.4em;
   padding: 0 0 1px;
   color: var(--docsearch-key-color);
   border: 1px solid var(--docsearch-key-border);
